tests/ui/privacy/pub-priv-dep/shared_both_private.stderr
error: type `Shared` from private dependency 'shared' in public interface
  --> $DIR/shared_both_private.rs:23:1
   |
LL | pub fn leaks_priv() -> shared::Shared {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/shared_both_private.rs:18:9
   |
LL | #![deny(exported_private_dependencies)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: type `Shared` from private dependency 'shared' in public interface
  --> $DIR/shared_both_private.rs:28:1
   |
LL | pub fn leaks_priv_reexport() -> reexport::Shared {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

